# rhodey

./: .gitignore  README.md
Code/ftxui-starter/: CMakeLists.txt  README.md
Code/ftxui-starter/build_emscripten/src/: index.html  run_webassembly.py
Code/ftxui-starter/src/: .clang-format  Alliance.h  AllianceMember.cpp  AllianceMember.h  BattleStrategy.h  CMakeLists.txt  Conglomerate.cpp  Conglomerate.h  Country.h  Country_UnitTest.cpp  Entity_Military_UnitTests.cpp  Faction.h  Factory_UnitTest.cpp  Map_UnitTest.cpp  UI.cpp  UI.h  WarPhase_UnitTest.cpp  logger.cpp  logger.h  main.cpp  unitTests  uuid.cpp  uuid.h
Code/ftxui-starter/src/Country/: Alliance.cpp  Alliance.h  CMakeLists.txt  Country.cpp  Country.h  Observable.cpp  Observable.h
Code/ftxui-starter/src/Country/BattleStrategy/: AttackRegionStrategy.h  BattleStrategy.cpp  BattleStrategy.h  Defensive.cpp  Defensive.h  Diplomacy.cpp  Diplomacy.h  Intel.cpp  Intel.h  Offensive.cpp  Offensive.h  Prepare.cpp  Prepare.h  Research.h  ResearchAndDevelopment.cpp  ResearchAndDevelopment.h
Code/ftxui-starter/src/Entities/: CMakeLists.txt  Entity.cpp  Entity.h
Code/ftxui-starter/src/Entities/Troop/: Commander.h  Soldier.h  Troop.cpp  Troop.h
Code/ftxui-starter/src/Entities/Vehicle/: Vehicle.cpp  Vehicle.h
Code/ftxui-starter/src/Entities/Vehicle/AirVehicle/: AirVehicle.cpp  AirVehicle.h  Bomber.cpp  Bomber.h  CargoPlane.cpp  CargoPlane.h  Fighterjet.cpp  Fighterjet.h
Code/ftxui-starter/src/Entities/Vehicle/GroundVehicle/: GroundVehicle.cpp  GroundVehicle.h  Tank.cpp  Tank.h  Truck.cpp  Truck.h
Code/ftxui-starter/src/Entities/Vehicle/WaterVehicle/: CargoShip.cpp  CargoShip.h  Carrier.cpp  Carrier.h  Submarine.cpp  Submarine.h  Warship.cpp  Warship.h  WaterVehicle.cpp  WaterVehicle.h
Code/ftxui-starter/src/Entities/WeaponTemplateMethod/: Weapon.cpp  Weapon.h  WeaponFlyWeightFactory.cpp  WeaponFlyWeightFactory.h  Weapons.cpp  Weapons.h
Code/ftxui-starter/src/Factories/: TroopFactory.cpp  TroopFactory.h  UnitFactory.cpp  UnitFactory.h  VehicleFactory.cpp  VehicleFactory.h
Code/ftxui-starter/src/MapRegions/: CMakeLists.txt  Map.cpp  Map.h  MapCaretaker.cpp  MapCaretaker.h  MapMemento.cpp  MapMemento.h  OccupancyTable.cpp  OccupancyTable.h  Region.cpp  Region.h
Code/ftxui-starter/src/Military/: Forces.cpp  Forces.h  Military.h  Regiment.cpp  Regiment.h  SpyAgency.h
Code/ftxui-starter/src/War/: CMakeLists.txt  War.cpp  War.h
Code/ftxui-starter/src/War/Battle/: Battle.cpp  Battle.h
Code/ftxui-starter/src/War/Narrative/: Narrative.h  NarrativeBuilder.cpp  NarrativeBuilder.h  NarrativeDirector.cpp  NarrativeDirector.h
Code/ftxui-starter/src/War/Narrative/ConcreteNarrativeBuilders/: EconomicNarrativeBuilder.cpp  EconomicNarrativeBuilder.h  PoliticalNarrativeBuilder.cpp  PoliticalNarrativeBuilder.h  ReligiousNarrativeBuilder.cpp  ReligiousNarrativeBuilder.h  RevengeNarrativeBuilder.cpp  RevengeNarrativeBuilder.h  TerritorialNarrativeBuilder.cpp  TerritorialNarrativeBuilder.h
Code/ftxui-starter/src/War/WarPhases/: Conflict.cpp  Conflict.h  Dispute.cpp  Dispute.h  DisputePhase.h  DisputeSettled.cpp  DisputeSettled.h  Hostilities.cpp  Hostilities.h  PostWar.cpp  PostWar.h  WarPhase.cpp  WarPhase.h
Docs/: activity.puml  activity1.puml  activity2.puml  activity3.puml  asdf.puml  communication.puml  main.puml  object.puml  object1.puml  object2.puml  rhodeyLogo.psd  sequence.puml  state.puml  state1.puml  state2
Doxygen/: doxyconfig
Doxygen/html/: annotated.html  classes.html  classrun__webassembly_1_1CustomHTTPRequestHandler-members.html  classrun__webassembly_1_1CustomHTTPRequestHandler.html  classrun__webassembly_1_1CustomHTTPRequestHandler__coll__graph.map  classrun__webassembly_1_1CustomHTTPRequestHandler__inherit__graph.map  classrun__webassembly_1_1CustomHTTPRequestHandler__inherit__graph.md5  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_81d0091d4c9d586bd19159327e3940b5.html  dir_e22c3359085c5b0f8b0ef8e150b16d5f.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  namespacemembers.html  namespacemembers_vars.html  namespacerun__webassembly.html  namespaces.html  run__webassembly_8py.html
Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  files_0.js  files_1.js  (+5 more)
