# # List the files to be included here
# set(War_FILES
#     War.cpp
#     War.h
#     WarPhases/Conflict.cpp
#     WarPhases/Conflict.h
#     WarPhases/Dispute.cpp
#     WarPhases/Dispute.h
#     WarPhases/DisputeSettled.cpp
#     WarPhases/DisputeSettled.h
#     WarPhases/Hostilities.cpp
#     WarPhases/Hostilities.h
#     WarPhases/PostWar.cpp
#     WarPhases/PostWar.h
#     WarPhases/WarPhase.cpp
#     WarPhases/WarPhase.h
# )

# add_library(War STATIC ${War_FILES})